--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ window.smartsupp||(function(d) {
                     </div>
                     <div class="item">
                     <center>
-                       <iframe class="embed-responsive-item" width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/QWeEeYabQPHWNbEQYKVdlPXHaogigWGycp-bhdf56Yg/embed"></iframe>
+                       <iframe class="embed-responsive-item" width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/_IS8tewBLudNPAKTFtVyaJiMVfyCgH6LY7Hjge4a4r2/embed?nosource"></iframe>
                         <div class="carousel-content">
-                        <p>Apple Basket Game!</p>
+                        <p>Ice-Cream Maker</p>
                         
                         
                         </div>
