--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ window.smartsupp||(function(d) {
                         </center>
                     
                     </div>
-                    <div class="item active">
+                    <div class="item">
                     <center>
                        <iframe class="embed-responsive-item" width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/_IS8tewBLudNPAKTFtVyaJiMVfyCgH6LY7Hjge4a4r2/embed?nosource"></iframe>
                         <div class="carousel-content">
