--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ window.smartsupp||(function(d) {
     <br>
     <img src="IMG2011122400192.jpg" class="cars">
     <h5>Jaguar XF</h5>
-    <p>This Car From UK Is Popular For Luxury And One Of The Most Popular Car Brand In India! One Of My Favourite And I Do Have This Car!......This To Has V6 Engine!....</p>
+    <p>This Car From UK Is Popular For Luxury And One Of The Most Popular Car Brand In India!</p>
     <br>
     <br>
     <br>
